[tool.poetry]
name = "blog-api-pythonv"
version = "0.1.0"
description = ""
authors = ["cxzlw <wsc_zds@qq.com>"]
readme = "README.md"
packages = [{include = "blog_api_pythonv"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
aiomysql = "^0.2.0"
rfc3986 = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
